[package]
name = "sched-bencher"
version = "0.1.0"
authors = ["Andrew J. Stone <andrew.j.stone.1@gmail.com>"]

[dependencies]
rabble = { path = "../" }
clap = "2"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
slog = {version = "2", features = ["max_level_trace"]}
slog-term = "2"
slog-async = "2"
slog-envlogger = "2"
amy = "0.8"

[profile.release]
debug = true

